[build-system]
requires = ["maturin>=1.3.2,<2.0"]
build-backend = "maturin"

[project]
name = "fastexcel"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "pyarrow>=8.0.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.4.4"]
polars = ["polars>=0.16.14"]


[project.urls]
"Source Code" = "https://github.com/ToucanToco/fastexcel"
Issues = "https://github.com/ToucanToco/fastexcel"

[tool.maturin]
python-source = "python"
module-name = "fastexcel._fastexcel"

[tool.mypy]
python_version = "3.8"
follow_imports = "silent"
ignore_missing_imports = true
# A few custom options
show_error_codes = true
warn_no_return = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = [
    "python/tests"
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "I", "Q", "FA102"]
